<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:SexSwitch="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"

    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/activity_40dp"
    android:orientation="horizontal"
    >
    <TextView
        android:layout_width="@dimen/activity_width_100dp"
        android:gravity="center|right"
        android:layout_marginRight="@dimen/activity_padding_15dp"
        android:layout_height="match_parent"
        android:text="@string/nianling"
        android:textSize="@dimen/activity_text_22sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="@dimen/activity_text_14sp"
        android:hint="请输入用户年龄"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_40dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/xingbie"
            android:textSize="@dimen/activity_text_22sp"
            />
        <com.novas.UI.SexSwitch
            SexSwitch:leftoptiontext="男"
            SexSwitch:rightoptiontext="女"
            android:id="@+id/sexswitch1"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_40dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/cp"
            android:textSize="@dimen/activity_text_22sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/activity_text_14sp"
            android:hint="请输入用户年龄"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_40dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/trestbps"
            android:textSize="@dimen/activity_text_22sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/activity_text_14sp"
            android:hint="请输入用户年龄"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_40dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/chol"
            android:textSize="@dimen/activity_text_22sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/activity_text_14sp"
            android:hint="请输入用户年龄"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_40dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/fbs"
            android:textSize="@dimen/activity_text_22sp"
            />
        <com.novas.UI.SexSwitch
            SexSwitch:leftoptiontext="是"
            SexSwitch:rightoptiontext="否"
            android:id="@+id/sexswitch2"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_40dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/restecg"
            android:textSize="@dimen/activity_text_22sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/activity_text_14sp"
            android:hint="请输入用户年龄"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_40dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/thalach"
            android:textSize="@dimen/activity_text_22sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/activity_text_14sp"
            android:hint="达到的最大心脏率"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_40dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/exang"
            android:textSize="@dimen/activity_text_22sp"
            />
        <com.novas.UI.SexSwitch
            SexSwitch:leftoptiontext="是"
            SexSwitch:rightoptiontext="否"
            android:id="@+id/sexswitch3"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_40dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/oldpeak"
            android:textSize="@dimen/activity_text_22sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/activity_text_14sp"
            android:hint="请输入用户年龄"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_40dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/slope"
            android:textSize="@dimen/activity_text_22sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/activity_text_14sp"
            android:hint="请输入用户年龄"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_40dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/ca"
            android:textSize="@dimen/activity_text_22sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/activity_text_14sp"
            android:hint="请输入用户年龄"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_40dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/thal"
            android:textSize="@dimen/activity_text_22sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/activity_text_14sp"
            android:hint="请输入用户年龄"
            />
    </LinearLayout>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="@dimen/activity_40dp"
        android:background="@color/green"
        android:text="@string/startpredict"
        />
</LinearLayout>