<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:SexSwitch="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/activity_40dp"
        android:gravity="center|left"
        android:layout_gravity="center"
        android:text="患者档案"
        android:background="@color/white"
        android:paddingLeft="@dimen/activity_20dp"
        android:textSize="@dimen/activity_text_22sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_25dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="预测时间"
            android:textSize="@dimen/activity_text_10sp"
            />
        <TextView
            android:id="@+id/userinfo_predicttime"
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|left"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="2016-4-26 9:40"
            android:textSize="@dimen/activity_text_10sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_25dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:textSize="@dimen/activity_text_10sp"
            />
        <TextView
            android:id="@+id/userinfo_name"
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|left"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="James"
            android:textSize="@dimen/activity_text_10sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_25dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/nianling"
            android:textSize="@dimen/activity_text_10sp"
            />
        <TextView
            android:id="@+id/userinfo_age"
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|left"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="65岁"
            android:textSize="@dimen/activity_text_10sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_25dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/xingbie"
            android:textSize="@dimen/activity_text_10sp"
            />
        <TextView
            android:id="@+id/userinfo_sex"
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|left"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="男"
            android:textSize="@dimen/activity_text_10sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_25dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/cp"
            android:textSize="@dimen/activity_text_10sp"
            />
        <TextView
            android:id="@+id/userinfo_cp"
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|left"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="典型心绞痛"
            android:textSize="@dimen/activity_text_10sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_25dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/trestbps"
            android:textSize="@dimen/activity_text_10sp"
            />
        <TextView
            android:id="@+id/userinfo_trestbps"
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|left"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="145 mm汞"
            android:textSize="@dimen/activity_text_10sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_25dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/chol"
            android:textSize="@dimen/activity_text_10sp"
            />
        <TextView
            android:id="@+id/userinfo_chol"
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|left"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="233 毫克分升"
            android:textSize="@dimen/activity_text_10sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_25dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/fbs"
            android:textSize="@dimen/activity_text_10sp"
            />
        <TextView
            android:id="@+id/userinfo_fbs"
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|left"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="否"
            android:textSize="@dimen/activity_text_10sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_25dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/restecg"
            android:textSize="@dimen/activity_text_10sp"
            />
        <TextView
            android:id="@+id/userinfo_restecg"
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|left"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="有ST-T波异常"
            android:textSize="@dimen/activity_text_10sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_25dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/thalach"
            android:textSize="@dimen/activity_text_10sp"
            />
        <TextView
            android:id="@+id/userinfo_thalach"
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|left"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="150"
            android:textSize="@dimen/activity_text_10sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_25dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/exang"
            android:textSize="@dimen/activity_text_10sp"
            />
        <TextView
            android:id="@+id/userinfo_exang"
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|left"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="否"
            android:textSize="@dimen/activity_text_10sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_25dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/oldpeak"
            android:textSize="@dimen/activity_text_10sp"
            />
        <TextView
            android:id="@+id/userinfo_oldpeak"
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|left"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="2.3"
            android:textSize="@dimen/activity_text_10sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_25dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/slope"
            android:textSize="@dimen/activity_text_10sp"
            />
        <TextView
            android:id="@+id/userinfo_slope"
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|left"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="向上倾斜"
            android:textSize="@dimen/activity_text_10sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_25dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/ca"
            android:textSize="@dimen/activity_text_10sp"
            />
        <TextView
            android:id="@+id/userinfo_ca"
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|left"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="0"
            android:textSize="@dimen/activity_text_10sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_25dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|right"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="@string/thal"
            android:textSize="@dimen/activity_text_10sp"
            />
        <TextView
            android:id="@+id/userinfo_thal"
            android:layout_width="@dimen/activity_width_100dp"
            android:gravity="center|left"
            android:layout_marginRight="@dimen/activity_padding_15dp"
            android:layout_height="match_parent"
            android:text="固定性缺陷"
            android:textSize="@dimen/activity_text_10sp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/userinforesult"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="40dip" />
    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/userinfo_chart"
        android:layout_width="match_parent"
        android:layout_height="130dip" />
</LinearLayout>