<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <FrameLayout
        android:id="@+id/home_tab_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_home_tab_height"
        android:layout_gravity="bottom"
        android:id="@+id/tab1"
        android:background="@color/activity_home_tab_background"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:gravity="center|bottom"
                android:paddingBottom="@dimen/activity_padding_15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@drawable/activity_home_tab_color_text"
                android:textSize="@dimen/activity_text_22sp"
                android:text="@string/yangsheng"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_home_tab_bottom_line"
                android:background="@drawable/activity_home_tab_bottom_line"
                ></View>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:id="@+id/tab2"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:gravity="center|bottom"
                android:paddingBottom="@dimen/activity_padding_15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@drawable/activity_home_tab_color_text"
                android:textSize="@dimen/activity_text_22sp"
                android:text="@string/yuce"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_home_tab_bottom_line"
                android:background="@drawable/activity_home_tab_bottom_line"
                ></View>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:id="@+id/tab3"
            >
            <TextView
                android:gravity="center|bottom"
                android:paddingBottom="@dimen/activity_padding_15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@drawable/activity_home_tab_color_text"
                android:textSize="@dimen/activity_text_22sp"
                android:text="@string/dangan"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_home_tab_bottom_line"
                android:background="@drawable/activity_home_tab_bottom_line"
                ></View>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>